# myactuator

./: .gitignore  CLAUDE.md  README.md  connect_can.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  phases  (+2 more)
myactuator_python_driver/: README.md  package.xml  setup.cfg  setup.py
myactuator_python_driver/.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
myactuator_python_driver/.planning/phases/01-safety-infrastructure-core-controller/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
myactuator_python_driver/.planning/phases/02-ui-shell-basic-calibration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
myactuator_python_driver/.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
myactuator_python_driver/config/: driver_config.yaml
myactuator_python_driver/launch/: driver.launch.py  driver_with_studio.launch.py
myactuator_python_driver/myactuator_python_driver/: can_utils.py  config.py  driver_node.py  motor_wrapper.py  recorder_tui.py  velocity_demo.py
myactuator_python_driver/myactuator_python_driver/calibrator/: __init__.py  config.py  controller.py  main.py  window.py
myactuator_python_driver/myactuator_python_driver/studio/: __init__.py  main.py  main_window.py  recording_manager.py  ros_bridge.py
myactuator_python_driver/myactuator_python_driver/studio/dialogs/: __init__.py  trigger_dialog.py
myactuator_python_driver/myactuator_python_driver/studio/models/: __init__.py  joint_state_model.py  recording_model.py
(+81 files in other folders)
