<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>myactuator_python_driver</name>
  <version>1.0.0</version>
  <description>Python ROS2 driver for MyActuator RMD motors with TUI setup and recording/playback</description>
  <maintainer email="nitish@example.com">Nitish</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>myactuator_rmd</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ros-jazzy-rosbag2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
